[package]
name = "nightrunner_lib"
version = "0.2.0"
edition = "2021"
authors = ["Aimeri Baddouh <aimeri@baddouh.me>"]
description = "A parser library for making text adventure games"
license = "Apache-2.0"
repository = "https://github.com/aimerib/nightrunner-lib"
documentation = "https://docs.rs/nightrunner_lib"
categories = ["parsing"]
keywords = ["engine", "parsing", "wasm", "game"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
regex = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
pretty_assertions = "1.1.0"
wasm-bindgen-test = "0.3.29"


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cursive = { version = "0.17.0", default-features = false, features = [
  "crossterm-backend",
] }
cursive-aligned-view = "0.6.0"

[[example]]
name = "cursive_example"
crate-type = ["bin"]
