[package]
name = "nightrunner_lib"
version = "0.3.1"
edition = "2021"
resolver="2"
authors = ["Aimeri Baddouh <aimeri@baddouh.me>"]
description = "A parser library for making text adventure games"
license = "Apache-2.0"
repository = "https://github.com/aimerib/nightrunner-lib"
documentation = "https://docs.rs/nightrunner_lib"
categories = ["parsing"]
keywords = ["engine", "parsing", "wasm", "game"]
readme = "README.md"


[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
serde_yaml = "0.9.33"
console_error_panic_hook = "0.1.7"
tsify = { git = "https://github.com/sisou/tsify", branch = "sisou/comments", features = ["js"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
wasm-bindgen-test = "0.3.42"


[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"] }
cursive-aligned-view = "0.6.0"

[[example]]
name = "cursive_example"
crate-type = ["bin"]
